apigate/tests/ui/fail/map_raw_borrowed_slice.stderr
error[E0597]: `raw` does not live long enough
 --> tests/ui/fail/map_raw_borrowed_slice.rs:6:9
  |
4 | #[apigate::map]
  | --------------- value captured here by coroutine
5 | async fn bad(raw: apigate::RawBody) -> apigate::MapResult<&'static [u8]> {
  |              --- binding `raw` declared here
6 |     Ok(&raw.as_bytes()[..])
  |     ----^^^----------------
  |     |   |
  |     |   borrowed value does not live long enough
  |     returning this value requires that `raw` is borrowed for `'static`
7 | }
  | - `raw` dropped here while still borrowed
